--- a/main.html
+++ b/main.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
 </head>
 
 <body>
@@ -21,17 +23,16 @@
             <!-- Right-sided navbar links -->
             <div class="w3-right w3-hide-small">
                 <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
-                <a href="#" class="w3-bar-item w3-button" id="signupLoginBtn" onclick="openPopup()"><i
-                        class="fa fa-user"></i> Sign Up / Log In</a>
-                <a href="#work" class="w3-bar-item w3-button"><i class="fa fa-th"></i> WORK</a>
-                <a href="#pricing" class="w3-bar-item w3-button"><i class="fa fa-usd"></i> PRICING</a>
-                <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
+                <a href="#" class="w3-bar-item w3-button" id="signupBtn" onclick="openSignupPopup()"> Sign Up</a>
+                <a href="#" class="w3-bar-item w3-button" id="loginBtn" onclick="openLoginPopup()"> Log In</a>
+                <a href="#pricing" class="w3-bar-item w3-button">PRICING</a>
+                <a href="#contact" class="w3-bar-item w3-button"> CONTACT</a>
             </div>
             <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
             <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium"
                 onclick="w3_open()">
-                <i class="fa fa-bars"></i>
+
             </a>
         </div>
     </div>
@@ -58,14 +59,6 @@
                     class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn
                     more and start today</a></p>
         </div>
-        <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
-            <i class="fa fa-facebook-official w3-hover-opacity"></i>
-            <i class="fa fa-instagram w3-hover-opacity"></i>
-            <i class="fa fa-snapchat w3-hover-opacity"></i>
-            <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-            <i class="fa fa-twitter w3-hover-opacity"></i>
-            <i class="fa fa-linkedin w3-hover-opacity"></i>
-        </div>
     </header>
 
     <!-- About Section -->
@@ -74,25 +67,25 @@
         <p class="w3-center w3-large">Key features of our company</p>
         <div class="w3-row-padding w3-center" style="margin-top:64px">
             <div class="w3-quarter">
-                <i class="fa fa-desktop w3-margin-bottom w3-jumbo w3-center"></i>
+
                 <p class="w3-large">Responsive</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore.</p>
             </div>
             <div class="w3-quarter">
-                <i class="fa fa-heart w3-margin-bottom w3-jumbo"></i>
+
                 <p class="w3-large">Passion</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore.</p>
             </div>
             <div class="w3-quarter">
-                <i class="fa fa-diamond w3-margin-bottom w3-jumbo"></i>
+
                 <p class="w3-large">Design</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore.</p>
             </div>
             <div class="w3-quarter">
-                <i class="fa fa-cog w3-margin-bottom w3-jumbo"></i>
+
                 <p class="w3-large">Support</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore.</p>
@@ -107,7 +100,7 @@
                 <h3>We know design.</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut
                     labore et dolore.</p>
-                <p><a href="#work" class="w3-button w3-black"><i class="fa fa-th"> </i> View Our Works</a></p>
+                <p><a href="#work" class="w3-button w3-black"> View Our Works</a></p>
             </div>
             <div class="w3-col m6">
                 <img class="w3-image w3-round-large" src="https://www.w3schools.com/w3images/phone_buildings.jpg"
@@ -129,7 +122,7 @@
                         <p class="w3-opacity">CEO & Founder</p>
                         <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque
                             elementum.</p>
-                        <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i>
+                        <p><button class="w3-button w3-light-grey w3-block">
                                 Contact</button></p>
                     </div>
                 </div>
@@ -142,7 +135,7 @@
                         <p class="w3-opacity">Art Director</p>
                         <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque
                             elementum.</p>
-                        <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i>
+                        <p><button class="w3-button w3-light-grey w3-block">
                                 Contact</button></p>
                     </div>
                 </div>
@@ -155,7 +148,7 @@
                         <p class="w3-opacity">Web Designer</p>
                         <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque
                             elementum.</p>
-                        <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i>
+                        <p><button class="w3-button w3-light-grey w3-block">
                                 Contact</button></p>
                     </div>
                 </div>
@@ -168,7 +161,7 @@
                         <p class="w3-opacity">Designer</p>
                         <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque
                             elementum.</p>
-                        <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i>
+                        <p><button class="w3-button w3-light-grey w3-block">
                                 Contact</button></p>
                     </div>
                 </div>
@@ -261,15 +254,15 @@
                     tempor incididunt ut labore et dolore.</p>
             </div>
             <div class="w3-col m6">
-                <p class="w3-wide"><i class="fa fa-camera w3-margin-right"></i>Photography</p>
+                <p class="w3-wide">Photography</p>
                 <div class="w3-grey">
                     <div class="w3-container w3-dark-grey w3-center" style="width:90%">90%</div>
                 </div>
-                <p class="w3-wide"><i class="fa fa-desktop w3-margin-right"></i>Web Design</p>
+                <p class="w3-wide">Web Design</p>
                 <div class="w3-grey">
                     <div class="w3-container w3-dark-grey w3-center" style="width:85%">85%</div>
                 </div>
-                <p class="w3-wide"><i class="fa fa-photo w3-margin-right"></i>Photoshop</p>
+                <p class="w3-wide">Photoshop</p>
                 <div class="w3-grey">
                     <div class="w3-container w3-dark-grey w3-center" style="width:75%">75%</div>
                 </div>
@@ -338,9 +331,9 @@
         <h3 class="w3-center">CONTACT</h3>
         <p class="w3-center w3-large">Lets get in touch. Send us a message:</p>
         <div style="margin-top:48px">
-            <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Chicago, US</p>
-            <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: +00 151515</p>
-            <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: mail@mail.com</p>
+            <p> Chicago, US</p>
+            <p>Phone: +00 151515</p>
+            <p>Email: mail@mail.com</p>
             <br>
             <form action="/action_page.php" target="_blank">
                 <p><input class="w3-input w3-border" type="text" placeholder="Name" required name="Name"></p>
@@ -349,7 +342,7 @@
                 <p><input class="w3-input w3-border" type="text" placeholder="Message" required name="Message"></p>
                 <p>
                     <button class="w3-button w3-black" type="submit">
-                        <i class="fa fa-paper-plane"></i> SEND MESSAGE
+                        SEND MESSAGE
                     </button>
                 </p>
             </form>
@@ -361,15 +354,7 @@
 
     <!-- Footer -->
     <footer class="w3-center w3-black w3-padding-64">
-        <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-        <div class="w3-xlarge w3-section">
-            <i class="fa fa-facebook-official w3-hover-opacity"></i>
-            <i class="fa fa-instagram w3-hover-opacity"></i>
-            <i class="fa fa-snapchat w3-hover-opacity"></i>
-            <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-            <i class="fa fa-twitter w3-hover-opacity"></i>
-            <i class="fa fa-linkedin w3-hover-opacity"></i>
-        </div>
+        <a href="#home" class="w3-button w3-light-grey">To the top</a>
         <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank"
                 class="w3-hover-text-green">w3.css</a></p>
     </footer>
@@ -381,17 +366,43 @@
 
 
 
-    <div id="popup" class="popup">
+
+    <div id="signUpPopup" class="popup">
         <div class="popup-content">
-            <span class="close" onclick="closePopup()">&times;</span>
-            <h2>Sign Up / Log In</h2>
+            <span class="close" onclick="closeSignupPopup()">&times;</span>
+            <h2>Sign Up</h2>
             <form>
-                <input type="text" placeholder="Username">
-                <input type="password" placeholder="Password">
+                <div class="input-wrapper">
+                    <input type="text" placeholder="Username">
+                </div>
+                <div class="input-wrapper">
+                    <input type="password" placeholder="Password">
+                </div>
+                <button type="submit"></i>Submit</button>
+            </form>
+        </div>
+    </div>
+
+
+
+    <div id="logInPopup" class="popup">
+        <div class="popup-content">
+            <span class="close" onclick="closeLoginPopup()">&times;</span>
+            <h2>Log In</h2>
+            <form>
+                <div class="input-wrapper">
+                    <input type="text" placeholder="Username">
+
+                </div>
+                <div class="input-wrapper">
+                    <input type="password" placeholder="Password">
+
+                </div>
                 <button type="submit">Submit</button>
             </form>
         </div>
     </div>
+
 </body>
 
 </html>
